--- a/app/views/dashboard/show.html.slim
+++ b/app/views/dashboard/show.html.slim
@@ -4,7 +4,7 @@ a.anchor#home
     .row
       .col-lg-10.col-lg-offset-1
         h1 <span>rails</span>box
-        h2 Fast and easy Ruby on Rails development boxes
+        h2 Fast and easy Ruby on Rails virtual machines
         p
           ' Ruby developer? Heard about <strong>DevOps</strong> but too busy to learn it? Streamline your development workflow in no time by creating production-like virtual machine with your development environment. Try this extremely simple to use VM configuration tool to create new <strong>Ruby on Rails</strong> server using
           a href='https://www.vagrantup.com/' <strong>vagrant</strong>
