--- a/app/views/dashboard/databases/_mongodb.html.slim
+++ b/app/views/dashboard/databases/_mongodb.html.slim
@@ -18,5 +18,5 @@
     .form-group
       label for='mongodb_db_name' Database Name
       input.form-control id='mongodb_db_name' name='mongodb_db_name' type='text' ng-model='db.name'
-p ng-show='mongodbConfigPath' <mark>{{ mongodbConfigPath }}</mark> will be automatically created based on the above params. Your old configuration will be backed up.
+p ng-show='mongodbConfigPath' <kbd>{{ mongodbConfigPath }}</kbd> will be automatically created based on the above params. Your old configuration will be backed up.
 p ng-hide='mongodbConfigPath' No configuration files will be created.
