--- a/app/views/dashboard/databases/_redis.html.slim
+++ b/app/views/dashboard/databases/_redis.html.slim
@@ -10,5 +10,5 @@
           input name='redis_orm' type='radio' value='redis-rb' ng-model='redisOrm'
           ' redis-rb
 
-p ng-show='redisOrm' <mark>config/initializers/redis.rb</mark> will be automatically created. Your old configuration (if any) will be backed up.
+p ng-show='redisOrm' <kbd>config/initializers/redis.rb</kbd> will be automatically created. Your old configuration (if any) will be backed up.
 p ng-hide='redisOrm' No configuration files will be created.
