--- a/app/views/dashboard/background_jobs/_delayed_job.html.slim
+++ b/app/views/dashboard/background_jobs/_delayed_job.html.slim
@@ -7,4 +7,4 @@
     .form-group
       label for='delayed_job_command' Command to start delayed_job
       input.form-control id='delayed_job_command' name='delayed_job_command' type='text' ng-model='delayed_job.command'
-p System service <mark>{{ delayed_job.app_name }}</mark> will be created. You can control it by running the following commands: <mark>sudo stop {{ delayed_job.app_name }}</mark>, <mark>sudo start {{ delayed_job.app_name }}</mark>, <mark>sudo restart {{ delayed_job.app_name }}</mark>.
+p System service <kbd>{{ delayed_job.app_name }}</kbd> will be created. You can control it by running the following commands: <kbd>sudo stop {{ delayed_job.app_name }}</kbd>, <kbd>sudo start {{ delayed_job.app_name }}</kbd>, <kbd>sudo restart {{ delayed_job.app_name }}</kbd>.
