--- a/app/views/dashboard/show.html.slim
+++ b/app/views/dashboard/show.html.slim
@@ -69,9 +69,9 @@ a.anchor#home
                         button.btn.btn-danger type='button' ng-click='deletePort($index)' Delete
                     tr
                       td
-                        input.form-control id='new_guest_port' type='text' placeholder='guest port' ng-model='newGuestPort'
+                        input.form-control id='new_guest_port' type='number' placeholder='guest port' ng-model='newGuestPort'
                       td
-                        input.form-control type='text' placeholder='host port' ng-model='newHostPort'
+                        input.form-control type='number' placeholder='host port' ng-model='newHostPort'
                       td
                         button.btn.btn-default ng-disabled='!newGuestPort || !newHostPort' ng-click='addPort()' Add
 
