--- a/app/templates/ansible/site.yml.erb
+++ b/app/templates/ansible/site.yml.erb
@@ -3,6 +3,7 @@
   gather_facts: no
   roles:
     - base
+    - swap
 <% (params[:databases] + params[:background_jobs]).each do |role| -%>
     - <%= role %>
 <% end %>
