--- a/app/views/dashboard/show.html.slim
+++ b/app/views/dashboard/show.html.slim
@@ -41,14 +41,15 @@ a.anchor#home
                   .col-lg-6
                     .form-group
                       label for='vm_memory' Memory, Mb
-                      p
-                        small The amount of memory which will be available for virtual machine. Ruby on Rails application are usually memory-heavy, so increasing this value to <strong>1024</strong> make sense sometimes.
                       input.form-control id='vm_memory' name='vm_memory' type='number' ng-model='vm.memory'
                   .col-lg-6
                     .form-group
+                      label for='vm_swap' Swap, Mb
+                      input.form-control id='vm_swap' name='vm_swap' type='number' ng-model='vm.swap'
+                .row
+                  .col-lg-6
+                    .form-group
                       label for='vm_cores' CPU cores
-                      p
-                        small Number of CPU cores which will be dedicated to virtual machine. Usually the default of <strong>1</strong> works fine, but for CPU-intensive applications you may raise it to <strong>2</strong> or higher.
                       select.form-control id='vm_cores' name='vm_cores' ng-options='coreNum for coreNum in coresList track by coreNum' ng-model='vm.cores'
 
               .col-lg-4
