Install additional packages

--- a/app/templates/ansible/group_vars/all.yml.erb
+++ b/app/templates/ansible/group_vars/all.yml.erb
@@ -7,6 +7,11 @@ app_name: <%= params[:vm_name] %>
   <% end %>
 <% end %>
 
+packages:
+<% params[:packages].each do |package| -%>
+  - <%= package %>
+<% end %>
+
 user_name: vagrant
 group_name: vagrant
 
