--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -26,7 +26,7 @@ html lang="en"
             li.active
               a href='#home' Home
             li
-              a href='#vm-settings' Virtual Machine
+              a href='#vm-settings' System
             li
               a href='#app-settings' Application
             li
