Hide step numbers on mobile

--- a/app/views/dashboard/show.html.slim
+++ b/app/views/dashboard/show.html.slim
@@ -19,7 +19,7 @@ a.anchor#home
     = token_tag nil
     a.anchor#vm-settings
     .row.step.step1 ng-controller='VirtualMachineController'
-      .col-lg-1.step-number
+      .col-lg-1.step-number.visible-lg-block
         h1 1
       .col-lg-11.step-conf
         .panel.panel-default
@@ -87,7 +87,7 @@ a.anchor#home
 
     a.anchor#app-settings
     .row.step.step2
-      .col-lg-1.step-number
+      .col-lg-1.step-number.visible-lg-block
         h1 2
       .col-lg-11.step-conf
         .panel.panel-default
@@ -128,7 +128,7 @@ a.anchor#home
 
     a.anchor#databases
     .row.step.step3 ng-controller='DatabasesController'
-      .col-lg-1.step-number
+      .col-lg-1.step-number.visible-lg-block
         h1 3
       .col-lg-11.step-conf
         .panel.panel-default
@@ -154,7 +154,7 @@ a.anchor#home
 
     a.anchor#background-jobs
     .row.step.step4 ng-controller='BackgroundJobsController'
-      .col-lg-1.step-number
+      .col-lg-1.step-number.visible-lg-block
         h1 4
       .col-lg-11.step-conf
         .panel.panel-default
