--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,6 +6,7 @@ html lang="en"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
     title= site_name
     = csrf_meta_tags
+    = favicon_link_tag 'favicon.ico'
     = stylesheet_link_tag "application", :media => "all"
     = javascript_include_tag "application"
     /! Le HTML5 shim, for IE6-8 support of HTML elements
