Switch rvm to user install

--- a/app/templates/ansible/roles/unicorn/templates/upstart.conf.j2
+++ b/app/templates/ansible/roles/unicorn/templates/upstart.conf.j2
@@ -13,6 +13,6 @@ setgid {{ group_name }}
 chdir {{ app_path }}
 
 script
-  bundle exec unicorn -c {{ unicorn_config_path }}
+  /bin/bash -l -c 'bundle exec unicorn -c {{ unicorn_config_path }}'
   sleep 5
 end script
