--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,7 +4,7 @@ html lang="en"
     meta charset="utf-8"
     meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-    title= site_name
+    title railsbox - Ruby on Rails virtual machines
     = csrf_meta_tags
     = favicon_link_tag 'favicon.ico'
     = stylesheet_link_tag "application", :media => "all"
