--- a/app/templates/ansible/roles/unicorn/templates/upstart.conf.j2
+++ b/app/templates/ansible/roles/unicorn/templates/upstart.conf.j2
@@ -3,7 +3,8 @@ description "{{ app_name }} unicorn app"
 start on [2]
 stop on runlevel [016]
 
-env PATH=$PATH:/usr/local/bin:/usr/bin
+env PATH=$PATH:/usr/local/bin:/usr/bin:/bin
+env HOME=/home/vagrant
 
 respawn
 
