--- a/app/templates/ansible/roles/base/tasks/main.yml.erb
+++ b/app/templates/ansible/roles/base/tasks/main.yml.erb
@@ -22,3 +22,11 @@
 - name: Install additional packages
   apt: name={{ item }}
   with_items: packages
+
+- name: Setup script to read application environment
+  template: src=read_environment.sh.j2 dest=/etc/profile.d/read_environment.sh
+  notify:
+    - restart unicorn
+<% params[:background_jobs].each do |job| -%>
+    - restart <%= job %>
+<% end %>
