--- a/app/views/dashboard/databases/_postgresql.html.slim
+++ b/app/views/dashboard/databases/_postgresql.html.slim
@@ -1,16 +1,27 @@
 .row
   .col-lg-2
     = render 'dashboard/databases/sql_orms', db: 'postgresql'
-  .col-lg-3
-    .form-group
-      label for='postgresql_db_name' Database Name
-      input.form-control id='postgresql_db_name' name='postgresql_db_name' type='text' ng-model='db.name'
-  .col-lg-3
-    .form-group
-      label for='postgresql_db_user' Database User
-      input.form-control id='postgresql_db_user' name='postgresql_db_user' type='text' ng-model='db.user'
-  .col-lg-3
-    .form-group
-      label for='postgresql_db_password' Database Password
-      input.form-control id='postgresql_db_password' name='postgresql_db_password' type='text' placeholder='optional'
+  .col-lg-10
+    .row
+      .col-lg-4
+        .form-group
+          label for='postgresql_db_name' Database Name
+          input.form-control id='postgresql_db_name' name='postgresql_db_name' type='text' ng-model='db.name'
+      .col-lg-4
+        .form-group
+          label for='postgresql_db_user' Database User
+          input.form-control id='postgresql_db_user' name='postgresql_db_user' type='text' ng-model='db.user'
+      .col-lg-4
+        .form-group
+          label for='postgresql_db_password' Database Password
+          input.form-control id='postgresql_db_password' name='postgresql_db_password' type='text' placeholder='optional'
+    .row
+      .col-lg-12
+        .form-group
+          label Extensions
+          .checkbox ng-repeat='ext in postgresql.extensions'
+            label
+              input type='checkbox' name='postgresql_extensions[]' value='{{ ext.name }}'
+              ' {{ ext.name }}
+
 = render 'dashboard/databases/sql_config'
