--- a/app/views/dashboard/show.html.slim
+++ b/app/views/dashboard/show.html.slim
@@ -15,7 +15,7 @@ a.anchor#home
           a.btn.btn-default.btn-lg href='#vm-settings' Get started
 
 .container-fluid ng-controller='ConfigurationController'
-  form role='form' method='post' action=configurations_path
+  form role='form' method='post' action=boxes_path
     = token_tag nil
     a.anchor#vm-settings
     .row.step.step1 ng-controller='VirtualMachineController'
