--- a/app/views/dashboard/background_jobs/_sidekiq.html.slim
+++ b/app/views/dashboard/background_jobs/_sidekiq.html.slim
@@ -2,9 +2,9 @@
   .col-lg-6
     .form-group
       label for='sidekiq_app_name' Service name
-      input.form-control id='sidekiq_app_name' name='sidekiq_app_name' type='text' ng-model='sidekiq.app_name'
+      input.form-control id='sidekiq_app_name' name='sidekiq_app_name' type='text' ng-model='configuration.sidekiq_app_name'
   .col-lg-6
     .form-group
       label for='sidekiq_command' Command to start sidekiq
-      input.form-control id='sidekiq_command' name='sidekiq_command' type='text' ng-model='sidekiq.command'
-p System service <kbd>{{ sidekiq.app_name }}</kbd> will be created. You can control it by running the following commands: <kbd>sudo stop {{ sidekiq.app_name }}</kbd>, <kbd>sudo start {{ sidekiq.app_name }}</kbd>, <kbd>sudo restart {{ sidekiq.app_name }}</kbd>.
+      input.form-control id='sidekiq_command' name='sidekiq_command' type='text' ng-model='configuration.sidekiq_command'
+p System service <kbd>{{ configuration.sidekiq_app_name }}</kbd> will be created. You can control it by running the following commands: <kbd>sudo stop {{ configuration.sidekiq_app_name }}</kbd>, <kbd>sudo start {{ configuration.sidekiq_app_name }}</kbd>, <kbd>sudo restart {{ configuration.sidekiq_app_name }}</kbd>.
