--- a/app/views/boxes/_form.html.slim
+++ b/app/views/boxes/_form.html.slim
@@ -13,24 +13,28 @@ a.anchor#vm-settings
               .col-lg-6
                 .form-group
                   label for='vm_name'= t('.name')
-                  input.form-control id='vm_name' name='vm_name' type='text' ng-model='configuration.vm_name'
+                  p
+                    small Only alphanumeric characters, dashes and underscores.
+                  input.form-control required=true id='vm_name' name='vm_name' type='text' ng-model='configuration.vm_name' ng-pattern="/^[0-9a-zA-Z_-]+$/"
               .col-lg-6
                 .form-group
                   label for='vm_os' Operating System
-                  select.form-control id='vm_os' name='vm_os' ng-options='os.name for os in osList track by os.box' ng-model='configuration.vm_os'
+                  p
+                    small Only latest Ubuntu supported at the moment.
+                  select.form-control required=true id='vm_os' name='vm_os' ng-options='os.name for os in osList track by os.box' ng-model='configuration.vm_os'
             .row
               .col-lg-4
                 .form-group
                   label for='vm_memory'= t('.memory')
-                  input.form-control id='vm_memory' name='vm_memory' type='text' ng-model='configuration.vm_memory'
+                  input.form-control required=true id='vm_memory' name='vm_memory' type='text' ng-model='configuration.vm_memory' ng-pattern="/^[0-9]+$/"
               .col-lg-4
                 .form-group
                   label for='vm_swap' Swap, Mb
-                  input.form-control id='vm_swap' name='vm_swap' type='text' ng-model='configuration.vm_swap'
+                  input.form-control required=true id='vm_swap' name='vm_swap' type='text' ng-model='configuration.vm_swap' ng-pattern="/^[0-9]+$/"
               .col-lg-4
                 .form-group
                   label for='vm_cores' CPU cores
-                  select.form-control id='vm_cores' name='vm_cores' ng-options='coreNum for coreNum in coresList track by coreNum' ng-model='configuration.vm_cores'
+                  select.form-control required=true id='vm_cores' name='vm_cores' ng-options='coreNum for coreNum in coresList track by coreNum' ng-model='configuration.vm_cores'
             .row
               .col-lg-12
                 .form-group
@@ -80,8 +84,8 @@ a.anchor#app-settings
             .form-group
               label for='server_name' Server name
               p
-                small Your application will be served by <a href="http://nginx.org/">nginx</a> and <a href="http://unicorn.bogomips.org/">unicorn</a>. You can control it by running standard upstart commands: <kbd>sudo stop {{ configuration.vm_name }}</kbd> and <kbd>sudo start {{ configuration.vm_name }}</kbd>.
-              input.form-control id='server_name' name='server_name' type='text' ng-model='configuration.server_name'
+                small It's recommended to keep <kbd>localhost</kbd> value here. Your application will be served by <a href="http://nginx.org/">nginx</a> and <a href="http://unicorn.bogomips.org/">unicorn</a>. You can control it by running standard upstart commands: <kbd>sudo stop {{ configuration.vm_name }}</kbd> and <kbd>sudo start {{ configuration.vm_name }}</kbd>.
+              input.form-control required='true' ng-pattern="/^[a-zA-Z0-9-.]+$/" id='server_name' name='server_name' type='text' ng-model='configuration.server_name'
           .col-lg-6
             .form-group
               label for='rails_version' Ruby on Rails version
