Disable sendfile in nginx

--- a/app/templates/ansible/roles/nginx/templates/nginx.conf.j2
+++ b/app/templates/ansible/roles/nginx/templates/nginx.conf.j2
@@ -8,6 +8,8 @@ server {
   listen 80;
   listen 443 ssl;
 
+  sendfile off;
+
   server_name {{ server_name }};
 
   ssl_certificate {{ ssl_certificate_path }};
